--- a/style.css
+++ b/style.css
@@ -6,77 +6,31 @@
     
     /* background: #f1faee; */
 }
-
-.navbar {
-    background: #2f2fa2;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
+body {
+    height: 100%;
+    background: linear-gradient(#2f2fa2,#080a4b);
+    background-size: auto;
 }
-.navbar_container {
 
-    display:flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: transparent;
-    max-width: 2000px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
 h1 {
     color:#f64c72;
     font-size: 40px;
-}
-
-.navbar_menu {
-    display: flex;
-    align-items: center;
-    list-style: none;
     text-align: center;
-    justify-content: space-between;
-
+    padding-top: 20px;
 }
 
-.navbar__links {
-    width: 100%;
-    border: none;
-    outline: none;
-    border-radius: 4px;
-    color: #F64c72;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    padding: 0 1rem;
-    height: 100%;
-}
-
-li {
-    font-size: 25px;
-    font-weight: 700;
-}
-
-.navbar__links:hover {
-    color: #2a9d8f;
-    transition: all 0.3s ease;
-}
 
 .main_container{
     display: flex;
     /* border: gray solid 3px; */
-    height: 1094px;
-    background: linear-gradient(#2f2fa2,#080a4b);
-    background-size: auto;
+    height: 42.55em;
     /* grid-template-columns: 1fr 1fr; */
     align-items: center;
     /* justify-content: space-evenly; */
     /* height: 65vh; */
+    /* border: 3px solid gray; */
 }
+
 
 .left_column {
     display: inline-block;
@@ -85,11 +39,12 @@ li {
     height: 100%;
     width: 50%;
     position: relative;
-    padding-top: 10%;
+    padding-top: 0;
     padding-left: 5%;
+    /* border: 3px solid gray; */
 }
 #submission {
-    margin-left: 33.5%;
+    margin-left: 47.5%;
     font-size: 1rem;
     background: #e76f51;
     padding: 14px 32px;
@@ -112,14 +67,14 @@ li {
 }
 
 #reset {
-    margin-left: 35.03%;
+    /* margin-left: 35.03%; */
     font-size: 1rem;
     background: #e76f51;
     padding: 14px 32px;
     border: none;
     border-radius: 4px;
     color: #fff;
-    margin-top: 2rem;
+    margin-top: 1rem;
     cursor: pointer;
     position: relative;
     transition: all 0.35s;
@@ -135,9 +90,14 @@ li {
     border-radius: 4px;
 }
 
+.left_column button {
+    margin-left: 50%;
+}
+
 h2{
+    margin-top: 5%;
     text-align: center;
-    width: 80%;
+    width: 115%;
     font-size: 40px;
     font-weight: bold;
     color: #f64c72;
@@ -146,7 +106,7 @@ h2{
 h3 {
     text-align: center;
     margin-top: 5%;
-    width: 80%;
+    width: 115%;
     font-size: 25px;
     color: #f64c72;
 }
@@ -212,8 +172,8 @@ input[type="number"] {
 .right_column {
     height: 100%;
     width: 50%;
-    padding-top: 8%;
-    padding-right: 10%;
+    padding-top: 0;
+    padding-left: 5%;
 }
 
 /* TESTING CLOCK LOOK */
