--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@
 }
 body {
     height: 100%;
-    background: linear-gradient(#2f2fa2,#080a4b);
+    background: #f6f6f2;
     background-size: auto;
 }
 
 h1 {
-    color:#f64c72;
+    color:#388087;
     font-size: 40px;
     text-align: center;
     padding-top: 20px;
@@ -46,7 +46,7 @@ h1 {
 #submission {
     margin-left: 47.5%;
     font-size: 1rem;
-    background: #e76f51;
+    background: #388087;
     padding: 14px 32px;
     border: none;
     border-radius: 4px;
@@ -61,7 +61,7 @@ h1 {
 #submission:hover {
     color: #fff;
     /* content: ''; */
-    background: #2a9d8f;
+    background: #badfe7;
     transition: ease 0.5s;
     border-radius: 4px;
 }
@@ -69,7 +69,7 @@ h1 {
 #reset {
     /* margin-left: 35.03%; */
     font-size: 1rem;
-    background: #e76f51;
+    background: #388087;
     padding: 14px 32px;
     border: none;
     border-radius: 4px;
@@ -85,7 +85,7 @@ h1 {
     color: #fff;
     /* position: absolute; */
     content: '';
-    background: #2a9d8f;
+    background: #badfe7;
     transition: ease 0.5s;
     border-radius: 4px;
 }
@@ -100,7 +100,7 @@ h2{
     width: 115%;
     font-size: 40px;
     font-weight: bold;
-    color: #f64c72;
+    color: #388087;
 }
 
 h3 {
@@ -108,7 +108,7 @@ h3 {
     margin-top: 5%;
     width: 115%;
     font-size: 25px;
-    color: #f64c72;
+    color: #388087;
 }
 
 input::-webkit-outer-spin-button,
@@ -134,7 +134,7 @@ input[type=number] {
     text-decoration: none;
     list-style: none;
     font-size: 15px;
-    color: #99738e;
+    color: #6fb3b8;
 }
 
 .forms li:first-child {
@@ -159,7 +159,7 @@ input[type=number] {
 .forms li input {
     font-weight: bold;
     border-radius: 15px 50px 30px 5px;
-    background: #e6e3e3;
+    background: #f6f6f2;
     padding: 20px;
     width: 200px;
     height: 10px;
@@ -182,7 +182,8 @@ input[type="number"] {
     width: 400px;
     height: 400px;
     justify-content: center;
-    margin: 110px;
+    margin-left: 100px;
+    margin-top: 90px;
   }
   
   .base-timer__svg {
@@ -230,5 +231,61 @@ input[type="number"] {
     align-items: center;
     justify-content: center;
     font-size: 48px;
-    color: #f64c72;
+    color: #6fb3b8;
   }
+
+
+.keys {
+    height: 28%;
+    width: 50%;
+    margin-left: 20%;
+    /* border: 3px solid gray; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 5em;
+}
+.key-green {
+    display: flex;
+    /* border: 3px solid gray; */
+    align-items: center;
+}
+
+.key-green__box {
+    border: 2px solid black;
+    background-color: rgb(65, 184, 131);
+    width: 12px;
+    height: 12px;
+}
+.key-green p {
+    color: #6fb3b8;
+    padding-left: 7px;
+}
+
+.key-red {
+    display: flex;
+    /* border: 3px solid gray; */
+    align-items: center;
+}
+
+.key-red__box {
+    border: 2px solid black;
+    background-color: rgb(184, 65, 65);
+    width: 12px;
+    height: 12px;
+}
+.key-red p {
+    color: #6fb3b8;
+    padding-left: 7px;
+}
+
+/* #roundsCount{
+    color: #6fb3b8;
+    font-size: 60px;
+    font-weight: bold;
+    border: 3px solid gray;
+    text-align: center;
+    height: 20%;
+    padding-top: 3%;
+    padding-left: 1%;
+} */
